# alpaca-backend-simulator

./: .env.example  .env.test  .gitignore  README.md  pyproject.toml  requirements.txt
alpaca_client/: __init__.py  client.py
alpaca_simulator/api/: market_data_api.py  trading_api.py
alpaca_simulator/common/: exceptions.py  logger.py
alpaca_simulator/data_access/: in_memory_trading_repository.py
alpaca_simulator/domain/market_data/: models.py  service.py
alpaca_simulator/domain/trading/: models.py  service.py
alpaca_simulator/tests/: conftest.py  test_alpaca_py_integration.py
alpaca_simulator/tests/api/: __init__.py  test_market_data_api.py  test_trading_api.py
alpaca_simulator/tests/data_access/: test_in_memory_trading_repository.py
alpaca_simulator/tests/domain/market_data/: test_models.py  test_service.py
alpaca_simulator/tests/domain/trading/: test_models.py  test_service.py
config/: __init__.py  settings.py
examples/: README.md  __init__.py  run_example.py
market_data_simulator/: __init__.py  main.py
mock_service/: __init__.py  main.py
tests/: conftest.py  test_alpaca_client.py  test_alpaca_py_integration.py
